syntax = "proto3";

option csharp_namespace = "Grpc";

package greet;

service Greeter {
	rpc SayHello (HelloRequest) returns (HelloReply);
}

service Calculator {
	rpc Sum (SumRequest) returns (SumResponse);
}

message SumRequest {
	int32 FirstNumber = 1;
	int32 SecondNumber = 2;
}

message SumResponse {
	int32 message = 1;
}

message HelloRequest {
	string name = 1;
}

message HelloReply {
	string message = 1;
}